# napari-tutorial-euroscipy2025

./: .gitignore  01_pure_python.py  02_magicgui.py  03_sliders.py  04_labels.py  05_features_and_points.py  06_watershed.py  07_mouse_callback.py  08_going_3D.py  README.md  napari_from_notebook.ipynb  napari_fundamentals.tiff  presentation.py  pyproject.toml  tutorial_full.py
