[project]
name = "napari-tutorial-euroscipy2025"
version = "0.1.0"
description = "A napari tutorial for euroscipy 2025"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "napari>=0.6.4",
    "napari-plugin-manager>=0.1.6",
    "pyqt6>=6.9.1",
    "scikit-image>=0.25.2",
    "scipy>=1.16.1",
]

[dependency-groups]
jupyterlab = [
    "jupyterlab>=4.4.6",
]
plugin = [
    "napari-animation>=0.0.9",
]
